@@ -1277,7 +1277,7 @@ BEGIN
     LTEXT           "&Global Difficulty Level",-1,7,92,73,8
 END
 
-IDD_PROPTABLE_LIGHTSOURCES DIALOGEX 0, 0, 125, 124
+IDD_PROPTABLE_LIGHTSOURCES DIALOGEX 0, 0, 125, 161
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1295,6 +1295,8 @@ BEGIN
     EDITTEXT        IDC_ENVEMISSIONSCALE,90,88,32,12,ES_AUTOHSCROLL
     LTEXT           "Ambient Occlusion Scale",IDC_STATIC,7,106,80,8
     EDITTEXT        IDC_AOSCALE,90,104,32,12,ES_AUTOHSCROLL
+    GROUPBOX        "Night -> Day",IDC_STATIC,7,123,114,34
+    CONTROL         "",IDC_DAYNIGHT_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,9,132,107,19
 END
 
 IDD_PROPTABLE_BALL DIALOGEX 0, 0, 125, 151
